[package]
edition = "2018"
name = "rust-rsa"
version = "0.1.0"

[dependencies]
clap = "3.0.0-beta.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2.14"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "encrypt"
path = "src/bin/encrypt.rs"

[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"
